Bug 484171 - "open menu" action disappears from toolbar when splitting terminal
Summary: "open menu" action disappears from toolbar when splitting terminal
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: split-view (other bugs)
Version First Reported In: 24.02.1
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: Romário Rios
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-03-21 15:29 UTC by Andrey Alekseev
Modified: 2024-03-26 23:29 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshots (148.19 KB, application/gzip)
2024-03-21 15:29 UTC, Andrey Alekseev
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andrey Alekseev 2024-03-21 15:29:22 UTC
Created attachment 167555 [details]
screenshots

SUMMARY

STEPS TO REPRODUCE
1.  Add "Open menu" action to toolbar
2.  hide menu
3.  split terminal multiple times and try switching between terminals

OBSERVED RESULT
Menu button will only be visible when first terminal is focused, but it will appear last, no matter what position was set for it in toolbar settings

EXPECTED RESULT
Toolbar buttons visibility should not depend on active terminal

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Also, when menu button is not listed in toolbar settings, it will be shown anyway when menu is hidden. It that case we can see the same behavior as described above.
This bug exists only for splits, not for tabs.
Comment 1 Kurt Hindenburg 2024-03-22 22:25:26 UTC
Yea something is off
Comment 2 Romário Rios 2024-03-25 00:24:18 UTC
Just created a merge request that should fix this: https://invent.kde.org/utilities/konsole/-/merge_requests/974
Comment 3 Romário Rios 2024-03-26 23:29:14 UTC
Git commit 08b3a4dc03db35a69ca0b9783e3c748f37e5e1e2 by Luiz Romário Santana Rios.
Committed on 26/03/2024 at 14:28.
Pushed by hindenburg into branch 'master'.

Add hamburger menu action to all active views

Fixes menu button disappearing when a view other than the first is
focused, and the button always appearing last.

M  +4    -2    src/MainWindow.cpp

https://invent.kde.org/utilities/konsole/-/commit/08b3a4dc03db35a69ca0b9783e3c748f37e5e1e2