Add hamburger menu action to all active views

Fixes menu button disappearing when a view other than the first is
focused, and the button always appearing last.

BUG: 484171
(cherry picked from commit 08b3a4dc03db35a69ca0b9783e3c748f37e5e1e2)